# dlsyscourse

./: .gitignore  README.md
hw0/: CMakeLists.txt
hw0/src/: simple_ml.py  simple_ml_ext.cpp
hw0/tests/: test_simple_ml.py
hw1/python/needle/: ops.py
hw1/tests/: test_autograd_hw.py
note/: README.md
